--- a/Python_For_Beginner_10_hours_Crash_Course.ipynb
+++ b/Python_For_Beginner_10_hours_Crash_Course.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -20,17 +20,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 100 1000 10000\n"
+      "10 100 1000 10000\n",
+      "10\n"
      ]
     }
    ],
    "source": [
     "#Rule 1- Allowed symbols - a-z, A-Z, _ , 0-9.\n",
-    "#Rule 2- Start with alphbets( a-z, A-Z).\n",
+    "#Rule 2- Start with alphbets( a-z, A-Z) OR _.\n",
     "#Rule 3- Can't be keywords.\n",
     "\n",
     "variable = 78\n",
     "random123 = 212\n",
+    "_shivam = 101\n",
+    "\n",
+    "# BUT if variable or method name start with '_' , it has some specific meaning\n",
+    "\n",
+    "_var1 = 1    # this is a protected variable\n",
+    "__var2 = 2   # the variable starting with 2 '_', is PRIVATE variable\n",
+    "__var3__ = 3 # var3 is a MAGIC variable.\n",
+    "\n",
     "\n",
     "# 34random = 78\n",
     "# if = 78\n",
@@ -42,7 +51,170 @@
     "\n",
     "T_O_T_A_L =10000\n",
     "\n",
-    "print(total,Total,TOTAL,T_O_T_A_L)\n"
+    "print(total,Total,TOTAL,T_O_T_A_L)\n",
+    "\n",
+    "# No variable name length limit.\n",
+    "\n",
+    "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx = 10\n",
+    "\n",
+    "print(xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 2- Reserved Words\n",
+    "\n",
+    "-> Python has total 33 reserved words while Java has 53 reserved words.\n",
+    "-> Reserved words represents some specific meaning or functionality.\n",
+    "\n",
+    "True, False, None   ( only these 3 are starting with uppercase letter,  else are in lowercase)\n",
+    "\n",
+    "-> In python, no switch or do-while concept is there.\n",
+    "-> int, float... are also not reserved words.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['False',\n",
+       " 'None',\n",
+       " 'True',\n",
+       " 'and',\n",
+       " 'as',\n",
+       " 'assert',\n",
+       " 'break',\n",
+       " 'class',\n",
+       " 'continue',\n",
+       " 'def',\n",
+       " 'del',\n",
+       " 'elif',\n",
+       " 'else',\n",
+       " 'except',\n",
+       " 'finally',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'global',\n",
+       " 'if',\n",
+       " 'import',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'lambda',\n",
+       " 'nonlocal',\n",
+       " 'not',\n",
+       " 'or',\n",
+       " 'pass',\n",
+       " 'raise',\n",
+       " 'return',\n",
+       " 'try',\n",
+       " 'while',\n",
+       " 'with',\n",
+       " 'yield']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can also check for keywords as follows \n",
+    "\n",
+    "import keyword\n",
+    "keyword.kwlist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3- Data Types\n",
+    "\n",
+    "Data types defines the type of the value stored in variable such as INTEGER, FLOAT, STRING, CHARACTER etc.\n",
+    "Python is DYNAMICALLY TYPED language, so the type of variable is automatically defined for the variable based on the value assigned to it.\n",
+    "\n",
+    "Python 3 has generally 14 built-in datatypes\n",
+    "\n",
+    "1  int\n",
+    "2  float\n",
+    "3  complex ( to represent complex numbers )\n",
+    "4  bool \n",
+    "5  str\n",
+    "6  list\n",
+    "7  tuple\n",
+    "8  set\n",
+    "9  frozenSet\n",
+    "10 dict\n",
+    "11 byte\n",
+    "12 bytearray\n",
+    "13 range\n",
+    "14 None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of x :  <class 'int'>\n",
+      "Type of y :  <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can know the type of variable using type method.\n",
+    "\n",
+    "x =10\n",
+    "y ='Shivam'\n",
+    "\n",
+    "print(\"Type of x : \",type(x))\n",
+    "print(\"Type of y : \",type(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4- Everything in Python is an OBJECT\n",
+    "\n",
+    "In python everything is represented as OBJECTS."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1736142080\n",
+      "<class 'int'>\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can get the address of a object using id() method.\n",
+    "\n",
+    "x = 100\n",
+    "\n",
+    "print(id(x))\n",
+    "print(type(x))\n",
+    "print(x)"
    ]
   },
   {
