--- a/Python_For_Beginner_10_hours_Crash_Course.ipynb
+++ b/Python_For_Beginner_10_hours_Crash_Course.ipynb
@@ -150,6 +150,8 @@
     "Data types defines the type of the value stored in variable such as INTEGER, FLOAT, STRING, CHARACTER etc.\n",
     "Python is DYNAMICALLY TYPED language, so the type of variable is automatically defined for the variable based on the value assigned to it.\n",
     "\n",
+    "It has 5 fundamental data types -> int , float, bool, str, complex.\n",
+    "\n",
     "Python 3 has generally 14 built-in datatypes\n",
     "\n",
     "1)  int\n",
@@ -741,13 +743,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13- str type -> + and * operator\n",
+    "\n",
+    "+ ' + ' -> is tring concatenation operator\n",
+    "* ' * ' -> is string repetition operator"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ten10\n",
+      "tentententententententententen\n",
+      "tentententententententententen\n",
+      "********************\n",
+      "shivam\n",
+      "********************\n"
+     ]
+    }
+   ],
+   "source": [
+    "# + and * operator\n",
+    "x = \"ten\"\n",
+    "\n",
+    "y = x + \"10\"\n",
+    "\n",
+    "print(y)\n",
+    "\n",
+    "z = x * 10\n",
+    "print(z)\n",
+    "\n",
+    "z1 = 10 * x       # 10 * x and x * 10 both are valid\n",
+    "print(z1)\n",
+    "\n",
+    "# for *, one operand must be STRING and other must be INT.\n",
+    "print('*'*20)\n",
+    "print(\"shivam\")\n",
+    "print('*'*20)"
+   ]
   },
   {
    "cell_type": "code",
