--- a/Python_For_Beginner_10_hours_Crash_Course.ipynb
+++ b/Python_For_Beginner_10_hours_Crash_Course.ipynb
@@ -791,6 +791,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14- Type Conversion using int()\n",
+    "\n",
+    "The process of changing the variable type from one to another is called type conversion.\n",
+    "\n",
+    "int() is used to convert other data type values to int.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string : 78\n",
+      "You entered :  78 <class 'str'>\n",
+      "Enter a integer : 78\n",
+      "You entered :  78 <class 'int'>\n",
+      "78\n",
+      "1\n",
+      "78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# int()\n",
+    "\n",
+    "# we can use int() to cast the input value to int\n",
+    "\n",
+    "x = input(\"Enter a string : \")\n",
+    "print(\"You entered : \",x,type(x))\n",
+    "\n",
+    "x = int(input(\"Enter a integer : \"))\n",
+    "print(\"You entered : \",x,type(x))\n",
+    "\n",
+    "\n",
+    "# float to int -> VALID\n",
+    "print(int(78.90))\n",
+    "\n",
+    "# complex to int -> NOT VALID\n",
+    "\n",
+    "# bool to int -> VALID\n",
+    "print(int(True))\n",
+    "\n",
+    "# str to int -> VALID only when string contains only INTEGRAL VALUE and in BASE -10.\n",
+    "print(int(\"78\"))\n",
+    "\n",
+    "# print(int(\"SeventyEight\"))   not valid as it doesn't contain integral value\n",
+    "# print(int(\"ob1111\"))         not valid as number represented in binary(base 2)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
