--- a/Python_For_Beginner_10_hours_Crash_Course.ipynb
+++ b/Python_For_Beginner_10_hours_Crash_Course.ipynb
@@ -1189,7 +1189,8 @@
     "* duplicates are allowed\n",
     "* represented as  [ ..... ]\n",
     "* indexing and slicing concept is applicable.\n",
-    "* growable in nature"
+    "* growable in nature\n",
+    "* MUTABLE in nature"
    ]
   },
   {
@@ -1217,8 +1218,123 @@
     "l = [10,20,'Shivam']\n",
     "\n",
     "print(type(l))\n",
-    "print(l)"
+    "print(l)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "* index start from 0 (for starting element) OR -1 (for last element).\n",
+    "* slicing can be done by using list[start : end +1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 'Shivam']\n",
+      "Shivam\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [10,20,'Shivam']\n",
+    "\n",
+    "print(l[1:3])\n",
+    "print(l[-1])\n",
+    "print(l[-3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* to add element to list use 'append' and to remove, use 'remove'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 'Shivam', 'Shukla', 50]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.append('Shukla')\n",
+    "l.append(50)\n",
+    "l.remove(20)\n",
+    "\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* To copy a list use [ : ] instead of just assigning thr reference of other list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50, 60]\n",
+      "[1000, 20, 30, 40, 50, 60]\n",
+      "[1000, 20, 30, 40, 50, 60]\n",
+      "[1000, 20, 30, 5000, 50, 60]\n",
+      "[1000, 20, 30, 40, 50, 60]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[10,20,30,40,50,60]\n",
+    "l1=l\n",
+    "\n",
+    "print(l1)\n",
+    "\n",
+    "l[0]=1000\n",
+    "print(l1)\n",
+    "# Here we made changes to 'l' but changes are reflected in l1 also!!!!!!!!!!!!\n",
+    "\n",
+    "# To overcome this we have to create a deep copy not a shallow copy.\n",
+    "\n",
+    "# deep copy\n",
+    "l2=l[ : ]\n",
+    "\n",
+    "print(l2)\n",
+    "l[3]=5000\n",
+    "\n",
+    "print(l1)\n",
+    "print(l2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
