--- a/Python_For_Beginner_10_hours_Crash_Course.ipynb
+++ b/Python_For_Beginner_10_hours_Crash_Course.ipynb
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,123 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* REVERSE a list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[60, 50, 5000, 30, 20, 1000]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[ : : -1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 22. Tuple\n",
+    "\n",
+    "Exactly same as LIST but only one difference that it is IMMUTABLE \n",
+    "\n",
+    "* Read only version of List.\n",
+    "* Represented by (......)\n",
+    "* Hetrogeneous Elements are allowed as in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "10\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "t=(10,20,30,40)\n",
+    "\n",
+    "print(type(t))\n",
+    "print(t[0])\n",
+    "print(t[-1])\n",
+    "\n",
+    "# If we try to modify element of a tuple, we'll get Type Error.\n",
+    "\n",
+    "#t[0]=40\n",
+    "\n",
+    "#TypeError                                 Traceback (most recent call last)\n",
+    "# <ipython-input-12-2371b0c12f2f> in <module>()\n",
+    "#       5 print(t[-1])\n",
+    "#       6 \n",
+    "# ----> 7 t[0]=40\n",
+    "\n",
+    "# TypeError: 'tuple' object does not support item assignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We can't add OR remove element from a Tuple.\n",
+    "\n",
+    "So append OR remove methods are not applicable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ambiguity between int and Tuble with 1 element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Emplty Tuple\n",
+    "t=()\n",
+    "print(type(t))\n",
+    "\n",
+    "# tuple with 1 element( , is must after element).\n",
+    "t1=( 10 ,)\n",
+    "print(type(t1))\n",
+    "\n",
+    "\n",
+    "# int type( without ,)\n",
+    "t2=(10)\n",
+    "print(type(t2))"
+   ]
   },
   {
    "cell_type": "code",
